Aligned the wave pattern and corrected animations

--- a/src/components/approach_benefits/approach_benefits.css
+++ b/src/components/approach_benefits/approach_benefits.css
@@ -3,15 +3,16 @@
     padding: 80px 160px;
     color: var(--background-color);
     position: relative;
+    overflow: hidden;
 }
 
 .wavePatternDiv {
     position: absolute;
     z-index: 0;
-    right: 0;
-    top: 0;
+    right: -80px;
+    top: -250px;
     height: 100%;
-    width: 450px;
+    width: 550px;
 }
 
 .approach, .benefits {
@@ -76,6 +77,10 @@
     .approach, .benefits {
         width: 100%;
     }
+
+    .wavePatternDiv {
+        width: 450px;
+    }
 }
 
 @media screen and (min-width: 641px) and (max-width: 808px) {
@@ -83,6 +88,10 @@
     .benefits {
         width: 80%;
     }
+    .wavePatternDiv {
+        top: 80px;
+        width: 350px;
+    }    
 }
 
 @media screen and (max-width: 808px) {
@@ -123,4 +132,7 @@
     .benefits {
         width: 100%;
     }
+    .wavePatternDiv {
+        display: none;
+    }  
 }
